[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-ethan"
version = "0.1.0"
description = "YAML-driven no-code AI agent builder"
authors = [{name = "EijiFuku"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.6",
    "pyyaml>=6.0",
    "jinja2>=3.1",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "langchain-core>=0.2",
    "langchain-community>=0.2",
    "langchain-openai>=0.2",
    "chromadb>=0.4",
    "openai>=1.30",
    "google-generativeai>=0.5",
    "anthropic>=0.26",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["agent_ethan", "agent_ethan.*"]
